[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.70"  # Keep in sync with README.md and rust-toolchain.toml.
license = "Apache-2.0"

# Shared dependencies that can be inherited.  This just helps a little with
# making sure our crates don't directly depend on different versions of things,
# although we can't help it if our transitive dependencies pull in more.
#
# Each crate can add on specific features freely as it inherits.
[workspace.dependencies]
indexmap.version = "2.2.3"
hashbrown.version = "0.14.0"
# This doesn't set `extension-module` as a shared feature because we need to be able to disable it
# during Rust-only testing (see # https://github.com/PyO3/pyo3/issues/340).
pyo3 = { version = "0.20.2", features = ["abi3-py38"] }

[profile.release]
lto = 'fat'
codegen-units = 1
