[build-system]
# This is duplicated as `dependency-groups.build` for convenience.
requires = [
    "setuptools>=77.0",
    "setuptools-rust @ git+https://github.com/jakelishman/setuptools-rust.git@data-files",
]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit"
description = "An open-source SDK for working with quantum computers at the level of extended quantum circuits, operators, and primitives."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = [
    "LICENSE.txt",
]
authors = [
    { name = "Qiskit Development Team", email = "qiskit@us.ibm.com" },
]
keywords = [
    "qiskit",
    "quantum circuit",
    "quantum computing",
    "quantum programming language",
    "quantum",
    "sdk",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
# These are configured in the `tool.setuptools.dynamic` table.
dynamic = ["version", "readme", "dependencies"]

# The optional dependencies of a project are part of the interface presented through
#   pip install qiskit[extra1,extra2,...]
# They all involve actually installing `qiskit` as part of the same command.  Use these for sets of
# _extra_ packages we expose to users.
#
# If modifying this table, sync with `qiskit.utils.optionals` and the `optionals-all` dependency
# group below.
[project.optional-dependencies]
qasm3-import = [
    "qiskit-qasm3-import >= 0.1.0",
]
visualization = [
    "matplotlib >= 3.3",
    "pydot",
    "Pillow >= 4.2.1",
    "pylatexenc >= 1.4",
    "seaborn >= 0.9.0",
    "sympy>=1.3",
]
crosstalk-pass = [
    "z3-solver >= 4.7",
]
csp-layout-pass = [
    "python-constraint >= 1.4",
]
qpy-compat = [
    "symengine>=0.11,<0.14",
    "sympy>1.3"
]
# This will make the resolution work for installers from PyPI, but `pip install .[all]` will be
# unreliable because `qiskit` will resolve to the PyPI version, so local changes in the
# optionals won't be reflected.
all = ["qiskit[qasm3-import,visualization,crosstalk-pass,csp-layout-pass,qpy-compat]"]

[project.urls]
Homepage = "https://www.ibm.com/quantum/qiskit"
Documentation = "https://quantum.cloud.ibm.com/docs"
"API Reference" = "https://quantum.cloud.ibm.com/docs/api/qiskit"
Repository = "https://github.com/Qiskit/qiskit"
Issues = "https://github.com/Qiskit/qiskit/issues"
Changelog = "https://quantum.cloud.ibm.com/docs/api/qiskit/release-notes"

[project.entry-points."qiskit.unitary_synthesis"]
default = "qiskit.transpiler.passes.synthesis.default_unitary_synth_plugin:DefaultUnitarySynthesis"
aqc = "qiskit.transpiler.passes.synthesis.aqc_plugin:AQCSynthesisPlugin"
sk = "qiskit.transpiler.passes.synthesis.solovay_kitaev_synthesis:SolovayKitaevSynthesis"
gridsynth = "qiskit.transpiler.passes.synthesis.ross_selinger_plugin:RossSelingerSynthesis"
clifford = "qiskit.transpiler.passes.synthesis.clifford_unitary_synth_plugin:CliffordUnitarySynthesis"

[project.entry-points."qiskit.synthesis"]
"clifford.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:DefaultSynthesisClifford"
"clifford.ag" = "qiskit.transpiler.passes.synthesis.hls_plugins:AGSynthesisClifford"
"clifford.bm" = "qiskit.transpiler.passes.synthesis.hls_plugins:BMSynthesisClifford"
"clifford.greedy" = "qiskit.transpiler.passes.synthesis.hls_plugins:GreedySynthesisClifford"
"clifford.layers" = "qiskit.transpiler.passes.synthesis.hls_plugins:LayerSynthesisClifford"
"clifford.lnn" = "qiskit.transpiler.passes.synthesis.hls_plugins:LayerLnnSynthesisClifford"
"linear_function.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:DefaultSynthesisLinearFunction"
"linear_function.kms" = "qiskit.transpiler.passes.synthesis.hls_plugins:KMSSynthesisLinearFunction"
"linear_function.pmh" = "qiskit.transpiler.passes.synthesis.hls_plugins:PMHSynthesisLinearFunction"
"mcx.n_dirty_i15" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesisNDirtyI15"
"mcx.n_clean_m15" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesisNCleanM15"
"mcx.2_clean_kg24" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesis2CleanKG24"
"mcx.2_dirty_kg24" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesis2DirtyKG24"
"mcx.1_clean_kg24" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesis1CleanKG24"
"mcx.1_dirty_kg24" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesis1DirtyKG24"
"mcx.1_clean_b95" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesis1CleanB95"
"mcx.gray_code" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesisGrayCode"
"mcx.noaux_v24" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesisNoAuxV24"
"mcx.noaux_hp24" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesisNoAuxHP24"
"mcx.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCXSynthesisDefault"
"mcmt.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCMTSynthesisDefault"
"mcmt.noaux" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCMTSynthesisNoAux"
"mcmt.vchain" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCMTSynthesisVChain"
"mcmt.xgate" = "qiskit.transpiler.passes.synthesis.hls_plugins:MCMTSynthesisXGate"
"permutation.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:BasicSynthesisPermutation"
"permutation.kms" = "qiskit.transpiler.passes.synthesis.hls_plugins:KMSSynthesisPermutation"
"permutation.basic" = "qiskit.transpiler.passes.synthesis.hls_plugins:BasicSynthesisPermutation"
"permutation.acg" = "qiskit.transpiler.passes.synthesis.hls_plugins:ACGSynthesisPermutation"
"qft.full" = "qiskit.transpiler.passes.synthesis.hls_plugins:QFTSynthesisFull"
"qft.line" = "qiskit.transpiler.passes.synthesis.hls_plugins:QFTSynthesisLine"
"qft.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:QFTSynthesisFull"
"permutation.token_swapper" = "qiskit.transpiler.passes.synthesis.hls_plugins:TokenSwapperSynthesisPermutation"
"IntComp.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:IntComparatorSynthesisDefault"
"IntComp.noaux" = "qiskit.transpiler.passes.synthesis.hls_plugins:IntComparatorSynthesisNoAux"
"IntComp.twos" = "qiskit.transpiler.passes.synthesis.hls_plugins:IntComparatorSynthesis2s"
"WeightedSum.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:WeightedSumSynthesisDefault"
"ModularAdder.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:ModularAdderSynthesisDefault"
"ModularAdder.ripple_c04" = "qiskit.transpiler.passes.synthesis.hls_plugins:ModularAdderSynthesisC04"
"ModularAdder.ripple_v95" = "qiskit.transpiler.passes.synthesis.hls_plugins:ModularAdderSynthesisV95"
"ModularAdder.modular_v17" = "qiskit.transpiler.passes.synthesis.hls_plugins:ModularAdderSynthesisV17"
"ModularAdder.qft_d00" = "qiskit.transpiler.passes.synthesis.hls_plugins:ModularAdderSynthesisD00"
"HalfAdder.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:HalfAdderSynthesisDefault"
"HalfAdder.ripple_c04" = "qiskit.transpiler.passes.synthesis.hls_plugins:HalfAdderSynthesisC04"
"HalfAdder.ripple_v95" = "qiskit.transpiler.passes.synthesis.hls_plugins:HalfAdderSynthesisV95"
"HalfAdder.ripple_r25" = "qiskit.transpiler.passes.synthesis.hls_plugins:HalfAdderSynthesisR25"
"HalfAdder.qft_d00" = "qiskit.transpiler.passes.synthesis.hls_plugins:HalfAdderSynthesisD00"
"FullAdder.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:FullAdderSynthesisDefault"
"FullAdder.ripple_c04" = "qiskit.transpiler.passes.synthesis.hls_plugins:FullAdderSynthesisC04"
"FullAdder.ripple_v95" = "qiskit.transpiler.passes.synthesis.hls_plugins:FullAdderSynthesisV95"
"Multiplier.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:MultiplierSynthesisDefault"
"Multiplier.qft_r17" = "qiskit.transpiler.passes.synthesis.hls_plugins:MultiplierSynthesisR17"
"Multiplier.cumulative_h18" = "qiskit.transpiler.passes.synthesis.hls_plugins:MultiplierSynthesisH18"
"PauliEvolution.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:PauliEvolutionSynthesisDefault"
"PauliEvolution.rustiq" = "qiskit.transpiler.passes.synthesis.hls_plugins:PauliEvolutionSynthesisRustiq"
"annotated.default" = "qiskit.transpiler.passes.synthesis.hls_plugins:AnnotatedSynthesisDefault"

[project.entry-points."qiskit.transpiler.init"]
default = "qiskit.transpiler.preset_passmanagers.builtin_plugins:DefaultInitPassManager"

[project.entry-points."qiskit.transpiler.translation"]
default = "qiskit.transpiler.preset_passmanagers.builtin_plugins:DefaultTranslationPassManager"
synthesis = "qiskit.transpiler.preset_passmanagers.builtin_plugins:UnitarySynthesisPassManager"
translator = "qiskit.transpiler.preset_passmanagers.builtin_plugins:BasisTranslatorPassManager"

[project.entry-points."qiskit.transpiler.routing"]
default = "qiskit.transpiler.preset_passmanagers.builtin_plugins:DefaultRoutingPassManager"
basic = "qiskit.transpiler.preset_passmanagers.builtin_plugins:BasicSwapPassManager"
lookahead = "qiskit.transpiler.preset_passmanagers.builtin_plugins:LookaheadSwapPassManager"
none = "qiskit.transpiler.preset_passmanagers.builtin_plugins:NoneRoutingPassManager"
sabre = "qiskit.transpiler.preset_passmanagers.builtin_plugins:SabreSwapPassManager"

[project.entry-points."qiskit.transpiler.optimization"]
default = "qiskit.transpiler.preset_passmanagers.builtin_plugins:OptimizationPassManager"

[project.entry-points."qiskit.transpiler.layout"]
default = "qiskit.transpiler.preset_passmanagers.builtin_plugins:DefaultLayoutPassManager"
dense = "qiskit.transpiler.preset_passmanagers.builtin_plugins:DenseLayoutPassManager"
sabre = "qiskit.transpiler.preset_passmanagers.builtin_plugins:SabreLayoutPassManager"
trivial = "qiskit.transpiler.preset_passmanagers.builtin_plugins:TrivialLayoutPassManager"

[project.entry-points."qiskit.transpiler.scheduling"]
alap = "qiskit.transpiler.preset_passmanagers.builtin_plugins:AlapSchedulingPassManager"
asap = "qiskit.transpiler.preset_passmanagers.builtin_plugins:AsapSchedulingPassManager"
default = "qiskit.transpiler.preset_passmanagers.builtin_plugins:DefaultSchedulingPassManager"

# Dependency groups are for developers working with the source code.  Install a dependency group by
# (for example) `pip install --group dev`.
#
# These are not exposed to end-users of the package, nor in the standard `pip install qiskit`
# process.  If you intended that, use `project.optional-dependencies` instead.
[dependency-groups]
# Sync with `build-system.requires`.
build = [
    "setuptools>=77.0",
    "setuptools-rust @ git+https://github.com/jakelishman/setuptools-rust.git@data-files",
]
# We use quite tight pins on pylint and astroid because they have a habit of adding new
# on-by-default lints that are harder to deal with.
lint = [
    "pylint~=3.2.0",
    "astroid~=3.2.0",
    "ruff==0.0.267",
    "reno>=4.1.0",  # duplicated with `doc`
    "black[jupyter]~=25.1",
]
# Dependencies to run the test suite.  This group needs to be installable on all Python versions
# that Qiskit supports.
test = [
    "stestr>=2.0",
    "ddt>=1.2.0",
    "coverage>=4.4.0",
    "threadpoolctl",  # More detail from Numpy/Scipy BLAS-usage reports.
]
# Random tests.
test-random = [
    "qiskit-aer",
    "hypothesis>=4.24.3",
]
# Dependencies to build the documentation.  It's ok if the range of Python versions that can build
# the docs is more restrictive than Python versions that Qiskit supports.
doc = [
    "Sphinx>=6.0,<7.2",
    "openqasm-pygments",
    "reno>=4.1.0",  # duplicated with `lint`
    "sphinxcontrib-katex==0.9.9",
    "breathe>=4.35.0",
]


# These `optionals-*` groups declared all of the optional dependency of Qiskit that can (mostly)
# reliably be installed by `pip`.  If you are familiar with the old Qiskit repository setup, the
# complete `optionals-all` corresponds to `requirements-optional.txt`.  If updating this, you
# probably need to update `qiskit.utils.optionals` as well.
optionals-test = [
    "fixtures",
    "testtools",
]
optionals-interactive = [
    "ipython",
    "matplotlib>=3.3",
    "pillow>=4.2.1",
    "pydot",
    "pylatexenc>=1.4",
    "seaborn>=0.9.0",
]
optionals-functional = [
    "qiskit-aer",
    "qiskit-qasm3-import>=0.5.0",
    "python-constraint>=1.4",
    "cvxpy",
    "scikit-learn>=0.20.0",
    "z3-solver>=4.7",
    "sympy>=1.3",
]
optionals-all = [
    {include-group = "optionals-test"},
    {include-group = "optionals-interactive"},
    {include-group = "optionals-functional"},
]

# The complete development environment.  This doesn't _need_ to work on all Python versions (in
# particular, we don't always expect `doc` to run on the oldest supported Pythons).  People working
# with older Pythons can install subgroups themselves.  This doesn't include `all-optionals` because
# that's typically way heavier than needed for a development environment.
#
# If you are familiar with the old Qiskit development structure, `pip install --group dev` replaces
# the old `pip install -r requirements-dev.txt`.
dev = [
    {include-group = "build"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "test-random"},
    {include-group = "doc"},
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "qiskit/VERSION.txt" }
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = {file = "requirements.txt" }

[tool.setuptools.packages.find]
include = ["qiskit", "qiskit.*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
skip = "cp38-* cp39-* *musllinux* *win32 *i686"
test-skip = "*win32 *linux_i686"
test-command = "cp -r {project}/test . && QISKIT_PARALLEL=FALSE stestr --test-path test/python run --abbreviate"
test-groups = ["test"]
# We need to use pre-built versions of Numpy and Scipy in the tests; we don't configure
# the CI machines to succeed at a source build, but the latest versions of these packages
# don't support the same range of Python versions as we do.
before-test = "pip install --only-binary=numpy,scipy numpy scipy -c constraints.txt"
# Some jobs locally override the before-build and environment configuration if a
# specific job override is needed. For example tier 1 platforms locally override
# the before-build and environment configuration to enable PGO,
# see: .github/workflows/wheels.yml for the jobs where this is done
environment = 'RUSTUP_TOOLCHAIN="stable"'

[tool.cibuildwheel.linux]
before-all = "yum install -y wget && {package}/tools/install_rust.sh"
environment = 'PATH="$PATH:$HOME/.cargo/bin" CARGO_NET_GIT_FETCH_WITH_CLI="true" RUSTUP_TOOLCHAIN="stable"'
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} && pipx run abi3audit --strict --report {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} && pipx run abi3audit --strict --report {wheel}"
environment = "MACOSX_DEPLOYMENT_TARGET='10.12' RUSTUP_TOOLCHAIN=stable"

[tool.cibuildwheel.windows]
test-command = "cp -r {project}/test . && stestr --test-path test/python run --abbreviate"
repair-wheel-command = "cp {wheel} {dest_dir}/. && pipx run abi3audit --strict --report {wheel}"

[tool.ruff]
select = [
  # Rules in alphabetic order
  "C4",    # category: flake8-comprehensions
  "EXE",   # Category: flake8-executable
  "F631",  # assert-tuple
  "F632",  # is-literal
  "F634",  # if-tuple
  "F823",  # undefined-local
  "G",     # flake8-logging-format
  "T10",   # category: flake8-debugger
]

[tool.pylint.main]
extension-pkg-allow-list = [
    "numpy",
    "qiskit._accelerate",
    "qiskit._qasm2",
    "qiskit._qasm3",
    # We can't allow pylint to load qiskit._qasm2 because it's not able to
    # statically resolve the cyclical load of the exception and it bugs out.
    "retworkx",
    "rustworkx",
]
load-plugins = ["pylint.extensions.docparams", "pylint.extensions.docstyle", "pylint.extensions.bad_builtin"]
py-version = "3.10"  # update it when bumping minimum supported python version

[tool.pylint.basic]
good-names = ["a", "b", "i", "j", "k", "d", "n", "m", "ex", "v", "w", "x", "y", "z", "Run", "_", "logger", "q", "c", "r", "qr", "cr", "qc", "nd", "pi", "op", "b", "ar", "br", "p", "cp", "ax", "dt", "__unittest", "iSwapGate", "mu"]
method-rgx = "(([a-z_][a-z0-9_]{2,49})|(assert[A-Z][a-zA-Z0-9]{2,43})|(test_[_a-zA-Z0-9]{2,}))$"
variable-rgx = "[a-z_][a-z0-9_]{1,30}$"

[tool.pylint.format]
max-line-length = 105  # default 100

[tool.pylint."messages control"]
disable = [
# intentionally disabled:
    "spelling",  # too noisy
    "fixme", # disabled as TODOs would show up as warnings
    "protected-access", # disabled as we don't follow the public vs private convention strictly
    "duplicate-code", # disabled as it is too verbose
    "redundant-returns-doc", # for @abstractmethod, it cannot interpret "pass"
    "too-many-lines", "too-many-branches", "too-many-locals", "too-many-nested-blocks", "too-many-statements",
    "too-many-instance-attributes", "too-many-arguments", "too-many-public-methods", "too-few-public-methods", "too-many-ancestors",
    "unnecessary-pass", # allow for methods with just "pass", for clarity
    "unnecessary-dunder-call", # do not want to implement
    "no-else-return",  # relax "elif" after a clause with a return
    "docstring-first-line-empty", # relax docstring style
    "import-outside-toplevel", "import-error", # overzealous with our optionals/dynamic packages
    "nested-min-max", # this gives false equivalencies if implemented for the current lint version
    "consider-using-max-builtin", "consider-using-min-builtin",  # unnecessary stylistic opinion
# TODO(#9614): these were added in modern Pylint. Decide if we want to enable them. If so,
#  remove from here and fix the issues. Else, move it above this section and add a comment
#  with the rationale
    "no-member",  # for dynamically created members
    "not-context-manager",
    "unnecessary-lambda-assignment",  # do not want to implement
    "unspecified-encoding",  # do not want to implement
]

enable = [
    "use-symbolic-message-instead"
]

[tool.pylint.spelling]
spelling-private-dict-file = ".local-spellings"

[tool.coverage.report]
exclude_also = [
    "def __repr__",               # Printable epresentational string does not typically execute during testing
    "raise NotImplementedError",  # Abstract methods are not testable
    "raise RuntimeError",         # Exceptions for defensive programming that cannot be tested a head
    "if TYPE_CHECKING:",          # Code that only runs during type checks
    "@abstractmethod",            # Abstract methods are not testable
    ]

[tool.pylint.deprecated_builtins]
bad-functions = ["print"]
